# dbtcore-bigquery

./: .user.yml  pyproject.toml
models/staging/: stg_orders.sql  stg_supplies.sql
